app/k8s/chuthe_frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: chuthe-ns
  name: chuthe-frontend
spec:
  type: NodePort
  selector:
    app: chuthe-app
  ports:
    - protocol: TCP
      port: 80
