app/k8s/chuthe_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: chuthe-ns
  name: chuthe-api
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: chuthe-app
